@startuml Class Diagram

left to right direction

package Controller {
    class AnimalController {
        - AnimalService animalService

        + void cadastrarNovoAnimal(String nome, String nomeCientifico, String habitat, String localNoZoo)
        + void atualizarAnimal(int idAnimal, int indiceCampo, String novoValor)
        + void deletarAnimal(int idDelecao)
        + AnimalDTO getAnimalInfo(int idConsulta)
        + Map<Integer, String> pegarNomeAnimaisCadastrados()
    }

    class RelatoController {
        - RelatoService relatoService

        + void criarRelato(String tituloRelato, String textoRelato, int animalRelatadoId)
        + Map<Integer, String> pegarTitulosRelatosCadastrados()
        + RelatoDTO pegarRelato(int idRelato)
        + void deletarRelato(int idRelato)
    }

    class UIController {
        - AnimalController animalController
        - RelatoController relatoController
        - InputUtil inputUtil
        - View view

        + void menuPrincipal()
        + void menuVisitante()
        + void menuAdministrador()
        + void menuConsultaAnimal()
        + void menuConsultaRelatos()
        + int menuColetaIndice(Map<Integer, String> map)
        + Map<Integer, Integer> listarItens(Map<Integer, String> itensCadastrados)
    }



    UIController *-down- AnimalController
    UIController *-down- RelatoController
}

package Databases {
    class AnimalDatabase {
        + void atualizarAnimal(int idAnimal, Animal animal)
        + void cadastrarNovoEntidade(Animal animal)
        + boolean animalJaCadastrado(Animal animal)
        + Map<Integer, String> getNomeItensCadastrados()
        + Animal getEntidadeDoBanco(int idAnimal)
        + void deletarDoBanco(int idAnimal)
    }

    abstract class BaseDatabase<T> {
        - static final String url
        - static final String user
        - static final String password

        # DataSource criarDataSource()
        + abstract void cadastrarNovaEntidade(T entidade)
        + abstract Map<Integer, String> getNomeItensCadastrados()
        + abstract T getEntidadeDoBanco(int idEntidade)
        + abstract void deletarDoBanco(int idEntidade)
    }

    class RelatoDatabase {
        + void cadastrarNovaEntidade(Relato entidade)
        + Map<Integer, String> getNomeItensCadastrados()
        + Relato getEntidadeDoBanco(int idEntidade)
        + void deletarDoBanco(int idEntidade)
    }

    BaseDatabase <|-down- AnimalDatabase : T = Animal
    BaseDatabase <|-down- RelatoDatabase : T = Relato
}

package DTOs {
    class AnimalDTO {
        - String nomePopular;
        - String nomeCientifico;
        - String habitat;
        - String localNoZoo;

        + String toString()
    }

    class RelatoDTO {
        - String relatoTitulo;
        - String relatoTexto;
        - String nomeAnimalRelatado;

        + String toString()
    }
}

package Exceptions {
    exception AnimalInvalidoException {

    }

    exception InputInvalidoException {

    }

    exception NenhumItemCadastradoException {

    }
}

package Mappers {
    class AnimalMapper {
        + static AnimalDTO converterParaDTO(Animal animal)
    }

    class RelatoMapper {
        + static RelatoDTO converterParaDTO(Relato relato)
    }



}

Mappers -- DTOs

package Model {
    package Services {
        class AnimalService {
            - AnimalDatabase animalDatabase

            + AnimalDTO getAnimalInfo(int idConsulta)
            + Map<Integer, String> pegarNomeAnimaisCadastrados()
            + void atualizarAnimal(int idAnimal, int idCampo, String novoValor)
            + void cadastrarAnimal(String nomePopular, String nomeCientifico, String habitat, String localNoZoo)
            + void deletarAnimal(int idAnimal)
            + void validarAnimal(Animal animal, boolean pularVerificacaoNoBanco)
        }

        class RelatoService {
            - RelatoDatabase relatoDatabase

            + void criarRelato(String tituloRelato, String textoRelato, int animalRelatadoId)
            + Map<Integer, String> pegarNomeRelatosCadastrados()
            + RelatoDTO pegarRelatoInfo(int relatoId)
            + void deletarRelato(int idRelato)
        }

        AnimalController *-down- AnimalService
        RelatoController *-down- RelatoService

        AnimalService *-down- AnimalDatabase
        RelatoService *-down- RelatoDatabase
    }

    class Animal {
        - String nomePopular;
        - String nomeCientifico;
        - String habitat;
        - String localNoZoo;
    }

    class Relato {
        - String tituloRelato;
        - String textoRelato;
        - int animalRelatadoId;
    }

    Animal -down- AnimalService
    Relato -down- RelatoService
}

package Util {
    class InputUtil {
        - Scanner sc

        + String getStringInput(String campoEntrada, boolean repetir)
        + String getAlphaInput(String campoEntrada, boolean repetir)
        + int getIntInput(String campoEntrada, boolean repetir)
    }

    InputUtil -right-* UIController
}

package View {
    class TextColor {
        + static final String ANSI_RESET
        + static final String WHITE_BOLD
        + static final String RED_BOLD
        + static final String GREEN_BOLD
        + static final String BLUE_BOLD
    }

    class View {
        + void mostrarMenuPrincipal()
        + void mostrarMenuVisitante()
        + void mostrarMenuAdministrador()
        + void mostrarMenuAdicaoAnimal()
        + void mostrarMenuAtualizacaoAnimal()
        + void mostrarMenuExclusaoAnimal()
        + void mostrarItensCadastrados(Map<Integer, String> itensCadastrados)
        + void mostrarCamposAtualizaveisAnimal()
        + void mostrarAnimalInfo(AnimalDTO animalDTO)
        + void mostrarRelatoInfo(RelatoDTO relatoDTO)
        + void mostrarMensagem(String mensagem)
        + void mostrarMensagemDeSucesso(String mensagem)
        + void mostrarErro(String erro)
    }

    TextColor -left- View
    View --* UIController


}

View -up- DTOs

@enduml